feat(battle)：增加皮肤级战斗背景与BGM表现配置。